@@ -29,7 +29,7 @@
   "MANAGE_EMOJIS": "Manage Emojis",
   "ONLY_DEVS": "This command is exclusive of my owner",
   "SLASH_COMMAND": "This command is already available in slash!",
-  "UNKNOWN_SLASH": "> This command doesn't exist anymore!",
+  "UNKNOWN_SLASH": "This command doesn't exist anymore!",
   "USER_MISSING_PERMISSION": "you must have the `{{perm}}` permission in order to execute this command.",
   "CLIENT_MISSING_PERMISSION": "I must have the `{{perm}}` permission in order to execute this command.",
   "BANNED_INFO": "You are banned from using Menhera!\n\nReason: `{{banReason}}`", 
