@@ -702,8 +702,8 @@
     "hourly_limit": "Você excedeu seu limite horário de altas apostas (São consideiradas apostas altas, apostas maiores que 10,000 estrelinhas feitas em Dupla de Números ou Número Único)!"
   },
   "bicho": {
-    "sorted-title": "Números Sorteados",
-    "sorted-description": "**Último Sorteio:** {{lastDate}}\nNúmeros Sorteados:\n1º - `{{first}}`\n2º - `{{second}}`\n3º - `{{third}}`\n4º - `{{fourth}}`\n5º - `{{fifth}}`\nMaior Lucro: **{{biggestProfit}}** :star:\n\nPróximo Sorteio: {{nextDate}}\n**Valor Acumulado:** {{value}} :star:",
+    "sorted-title": "🐾 | Jogo do Bicho",
+    "sorted-description": "**Último Sorteio:** {{lastDate}}\nNúmeros Sorteados:\n1º - `{{first}}` - {{firstAnimal}}\n2º - `{{second}}` - {{secondAnimal}}\n3º - `{{third}}` - {{thirdAnimal}}\n4º - `{{fourth}}` - {{fourthAnimal}}\n5º - `{{fifth}}` - {{fifthAnimal}}\nMaior Lucro: **{{biggestProfit}}** :star:\n\nPróximo Sorteio: {{nextDate}}\n\n**Usuários Apostando:** {{users}}\n**Valor Acumulado:** {{value}} :star:",
     "no-register": "Sem Registro",
     "invalid-bet": "Você inseriu uma aposta inválida! Verifique novamente sua seleção",
     "label": "Digite um número entre {{min}} e {{max}}",
@@ -721,9 +721,22 @@
     "second": "segundo",
     "third": "terceiro",
     "in": "Você está Dentro!",
-    "in-description": "Você está participando desta aposta!",
+    "in-description": "Você está participando desta aposta!\n\n**Tipo de Aposta:** {{type}}\n**Sua Escolha:** {{option}}\n**Seu Possível Lucro:** {{profit}} :star:",
     "already": "Você já apostou neste Jogo do Bicho! Espere o próximo começar",
-    "success": "Sua aposta foi feita com sucesso! Fique ligado nos resultados para saber se ganhou algo. Mas não se preocupe, o crédito vai ser debitado automaticamente em sua conta!"
+    "how-to-title": "Como jogar o Jogo do Bicho",
+    "how-to": "Como Jogar",
+    "how-to-description": "O jogo do bicho se baseia em 5 milhas sorteadas a cada {{duration}} horas. Você pode apostar em diferentes categorias: `número`, `animal`, `sequência` e `quina`. No número, você escolhe quualquer número entre 0 e 9999. Sua aposta terá lucros diferentes baseados se o número que apostou é uma unidade, uma dezena, uma centena ou um milhar. Se o número que você apostou cair em qualquer um dos 5 sorteios, você ganhou!\nAs outras 3 formas de apostas se baseiam na tabela de animais que você pode ver logo abaixo. O animal se baseia na dezena dos números sorteados, então o que vale são somente os últimos 2 números de cada sorteio. A aposta de animal é a mais simples, caso o animal que você escolheu caiu em algum dos 5 sorteios, você ganhou! Na sequência, você escolhe dois animais. Esses animais devem cair em sequência em qualquer um dos sorteios. Não precisam ser logo em seguida (por exemplo sorteio 1 e sorteio 2), eles só precisam estar em sequência (por exemplo, sorteio 2 e sorteio 5). Por fim, a quina! Para ganhar a quina, você deve dizer os animais que serão sorteados em todas as 5 rodadas. A ordem não importa na quina, você só tem que acertar os 5 animais (pode haver repitidos).\n\n**TABELA DE BICHOS**\n\n{{table}}",
+    "bet-types": {
+      "unity": "Unidade",
+      "ten": "Dezena",
+      "hundred": "Centena",
+      "thousand": "Milhar",
+      "corner": "Quina",
+      "sequence": "Sequência",
+      "animal": "Animal" 
+    },
+    "footer": "Para ver resultados antigos, entre no servidor de suporte",
+    "success": "Sua aposta foi feita com sucesso! Fique ligado nos resultados para saber se ganhou algo. Mas não se preocupe, o crédito vai ser adicionado automaticamente em sua conta!"
   },
   "badges": {
     "title": "Suas Badges",
