@@ -28,7 +28,7 @@
   "MANAGE_WEBHOOKS": "Gerenciar Webhooks",
   "MANAGE_EMOJIS": "Gerenciar Emojis",
   "ONLY_DEVS": "Este comando é de uso esclusivo da minha dona >...<",
-  "UNKNOWN_SLASH": "> Este comando não existe mais!",
+  "UNKNOWN_SLASH": "Este comando não existe mais!",
   "USER_MISSING_PERMISSION": "Você não tem a permissão de `{{perm}}` para poder executar este comando.",
   "CLIENT_MISSING_PERMISSION": "Eu não tenho permissão de `{{perm}}` para poder executar este comando.",
   "BANNED_INFO": "Você está banido de utilizar a Menhera!\n\nMotivo: `{{banReason}}`",
